--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/rakibhasanbappy/blood-donation-system/issues"
   },
-  "homepage": "https://github.com/rakibhasanbappy/blood-donation-system#readme"
+  "homepage": "https://github.com/rakibhasanbappy/blood-donation-system#readme",
+  "dependencies": {
+    "console-ninja": "^1.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0"
+  }
 }
