--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "console-ninja": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "pg": "^8.13.0"
   }
 }
