--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/rakibhasanbappy/blood-donation-system#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "console-ninja": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
