--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "console-ninja": "^1.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0"
   }
 }
