--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node index.js",
-    "prod": "NODE_ENV=production node index.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
